# GNSS

./: .cproject  .gitignore  README.md
Core/Src/: main.c
Debug/: gps.elf  gps.list  gps.map  makefile
Debug/Core/Src/: main.su
FSM_DEBUG/: .cproject  .project  FSM_DEBUG Debug.launch  FSM_DEBUG.ioc
FSM_DEBUG/Core/Inc/: GNSSDriver.h  main.h  print.h  state_machine.h  stm32f4xx_it.h
FSM_DEBUG/Core/Src/: GNSSDriver.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
GNSS 2020 V1/: .mxproject  gps Debug.launch  gps.ioc
GNSS_2020_TEST/: .cproject  .mxproject  .project  GNSS_2020_TEST Debug.launch  GNSS_2020_TEST.ioc
GNSS_2026/: .cproject  .mxproject  .project  GNSS_2026 Debug.launch  GNSS_2026.ioc
GNSS_2026_V2/: .cproject  .mxproject  .project  GNSS_2026_V2 Debug.launch  GNSS_2026_V2.ioc  STM32U535CCTX_FLASH.ld
Local Testing/: CMakeLists.txt  main.c
Local Testing/inc/: GNSSDriver.h  main.h  typedefs.h
Local Testing/src/: GNSSDriver.c
U5_CAN_TEST/: .cproject  .mxproject  .project  STM32U535CCTX_FLASH.ld  U5_CAN_TEST Debug.launch  U5_CAN_TEST.ioc
arduino-codes/CAN_Debugger/: CAN_Debugger.ino
arduino-codes/EnviadorCAN/: EnviadorCAN.ino  user_mcp_can.ino
arduino-codes/EnviadorCAN_v2/: EnviadorCAN_v2.ino
arduino-codes/EnviadorNMEA/: EnviadorNMEA.ino
arduino-codes/GNSS_Tester/: GNSS_Tester.ino  README.md
arduino-codes/debuggerCAN/: debuggerCAN.ino
arduino-codes/imu_mcp_lucas/: imu_mcp_lucas.ino  mcp_can.h
arduino-codes/receptorTelemetria/: Receptor_FreeRTOS.ino
logs_putty/: 140426_estacionamento.csv  17042026_coltec.txt  17042026_coltec_2.txt
(+39 files in other folders)
